--- a/Part 2/1_Layout/02-Sizing_elements/index.html
+++ b/Part 2/1_Layout/02-Sizing_elements/index.html
@@ -14,6 +14,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Hello World</h1>
     <div class="box"></div>
     <!-- <span class="box"></span>
     <span class="box"></span> -->
