--- a/Part 2/1_Layout/02-Sizing_elements/index.html
+++ b/Part 2/1_Layout/02-Sizing_elements/index.html
@@ -15,6 +15,8 @@
   </head>
   <body>
     <h1>Hello World</h1>
+    <h2>Hello World, this is the test.</h2>
+
     <div class="box"></div>
     <!-- <span class="box"></span>
     <span class="box"></span> -->
