--- a/Part 2/1_Layout/06-Floating_elements/index.html
+++ b/Part 2/1_Layout/06-Floating_elements/index.html
@@ -14,6 +14,7 @@
     <title>Document</title>
   </head>
   <body>
+    <h1>Hello World</h1>
     <!-- Which element can be used to represent a tweet?  -->
     <!-- The article element can represent any independent self-contained piece of content -->
     <article class="tweet clearfix">
